--- a/css/styles.css
+++ b/css/styles.css
@@ -610,6 +610,7 @@ section {
 .service-section {
     padding: 80px 0;
     text-align: center;
+    background-color: var(--white);
 }
 
 .service-content {
@@ -842,6 +843,7 @@ section {
 
 .why-buy {
     background-color: var(--white);
+    padding: 80px 0;
 }
 
 .quote-request {
@@ -1440,4 +1442,10 @@ section {
 
 #theme-toggle:hover {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+/* ===== LICENSING SECTION ===== */
+.licensing-section {
+    background-color: var(--white);
+    padding: 80px 0;
 }
